# HebrewLiveDictation

./: .gitignore  HebrewLiveDictation.spec  README.md  SECURITY.md  app.manifest  build_app.ps1  main.py  pyproject.toml  release_notes.md  requirements.txt  settings.example.json  setup_script.iss
.github/workflows/: build-release.yml  winui-beta.yml
benchmark/: README.md  run_benchmark.py
benchmark/samples/: README.md
docs/: PARITY_IMPLEMENTATION_STATUS.md  architecture.md  final-independent-review-package.md  final-product-completion-plan.md  future_pause_resume.md  qa.md  updater.md  v2_tsf_risk_plan.md  winui-beta-test-checklist.md  winui-migration-phase1.md  winui-release-qa.md
native/tsf_hello_peer/: CMakeLists.txt  README.md  build_local.ps1
native/tsf_hello_peer/src/: dllmain.cpp  main.cpp  voice_type_tsf_composition.cpp  voice_type_tsf_composition.h  voice_type_tsf_hello_peer.cpp  voice_type_tsf_hello_peer.h  voice_type_tsf_protocol.cpp  voice_type_tsf_protocol.h  voice_type_tsf_registration.cpp  voice_type_tsf_registration.h  voice_type_tsf_runtime.cpp  voice_type_tsf_runtime.h  voice_type_tsf_text_service.cpp  voice_type_tsf_text_service.h
output/: ADRS.md  ANTIGRAVITY_REVIEW_PROMPT.md  ARCHITECTURE_UPGRADE_PLAN.md  CLAUDE_EXECUTION_PROMPTS.md  CODEX_HANDOFF_PROMPT.md  EPICS_AND_ISSUES.md  FEATURE_PARITY_MATRIX.md  FINAL_EXECUTIVE_SUMMARY.md  MASTER_PARITY_PLAN.md  PLAN_AUDIT.md  QA_ACCEPTANCE_MATRIX.md  RISK_REGISTER.md
packaging/: build_beta.ps1  build_engine.ps1  engine.spec  engine_main.py  verify_beta.ps1
scripts/: packaging_audit.py  release_audit.py  sign_release.py  tsf_ipc_probe.py
src/hebrew_live_dictation/: __init__.py  __main__.py  app_logging.py  audio_feedback.py  audio_stream.py  benchmark.py  config.py  crash_handler.py  dictation_controller.py  editing_backend.py  export.py  google_stt_v2_stream.py  hebrew_text.py  history.py  hotkeys.py  i18n.py  interfaces.py  language_packs.py  models.py  qt_app.py  secrets_store.py  speech_presets.py  stt_factory.py  text_diff.py  text_injector.py  tsf_bridge.py  tsf_ipc.py  tsf_protocol.py  updater.py  vad.py
tests/: test_audio_feedback.py  test_auto_select.py  test_benchmark.py  test_bridge_server.py  test_config_and_language.py  test_crash_handler.py  test_deepgram.py  test_dictation_controller.py  test_fallback.py  test_final_clipboard_insertion.py  test_golden_safety.py  test_google_stt_probe.py  test_google_stt_v2_stream.py  test_groq.py  test_hebrew_text.py  test_history_export.py  test_hotkeys.py  test_models.py  test_packaging_audit.py  test_poststop_final.py  test_secrets_store.py  test_segmenter.py  test_sidecar_callbacks.py  test_sidecar_health.py  test_sidecar_lifecycle.py  test_sign_release.py  test_stt_provider_registry.py  test_text_injector.py  test_toolbar.py  test_tsf_ipc.py  test_tsf_protocol.py  test_unicode_integrity.py  test_updater.py  test_vad_and_privacy.py  test_verify.py  test_whisper_local.py
tools/: google_stt_probe.py
winui/: .gitignore  VoiceType.slnx
(+50 files in other folders)
