[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hebrew-live-dictation"
version = "1.0.0b1"
description = "Hebrew-first Windows dictation app using Google Speech-to-Text V2 Chirp 3."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary beta" }
authors = [{ name = "Hebrew Live Dictation" }]
keywords = ["dictation", "hebrew", "windows", "speech-to-text", "google-cloud"]
dependencies = [
  "google-cloud-speech>=2.28.0",
  "sounddevice>=0.4.6",
  "numpy>=1.26",
  "pynput>=1.7",
  "pyautogui>=0.9",
  "pyperclip>=1.8",
  "pillow>=10",
  "PySide6>=6.7",
  "uiautomation>=2.0",
  "charset_normalizer>=3.0",
  "keyring>=24",
  "faster-whisper>=1.0",
  "psutil>=5.9",
  "requests>=2.31",
  "websockets>=12",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev = ["pyinstaller>=6.0"]

[project.scripts]
hebrew-live-dictation = "hebrew_live_dictation.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
hebrew_live_dictation = ["py.typed"]
